resume.css
@CHARSET "UTF-8";

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* My Styles */
A:link {text-decoration: none}
A:visited {text-decoration: none}
A:active {text-decoration: none}
A:hover {text-decoration: underline; color: red;}

body {
	font-family:georgia,garamond,serif;
	font-size: 1em;
	line-height: 1.4;
}

h2 {
	position: relative;
	width: 938px;
	margin: 0 0 16px -20px;
	padding: 2px 10px;
	background-color: #555;
	border: 1px solid #444;
	color: #F8F8F8;
	font: normal 1.2em Helvetica, Arial, sans-serif;
	text-shadow: none;
	text-transform: uppercase;
	
}

h3 {
	position: relative;
	width: 928px;
	margin: 0 0 16px -10px;
	padding: 4px 10px;
	background-color: #EBEBEB;
	border: 1px solid #DDD;
	color: #666;
	font: bold 1.1em Helvetica, Arial, sans-serif;
	text-transform: uppercase;
}

strong, b {
	font-weight: bolder;
}

em {
	font-style: italic;
}

h3 em {
	float: right;
}

.disc li {
	list-style-type: disc;
	margin: 0 0 14px;
}

#headerWrapper {
	position: relative;
	z-index: 100;
	overflow: hidden;
	clear: both;
	width: 100%;
	margin: 0 0 10px;
}

#header {
	overflow: hidden;
	width: 960px;
	margin: 0 auto;
	padding: 23px 0 5px;
	text-shadow: 1px 1px 0 #f8f8f8;
}

#contact {
	overflow: hidden;
	float: left;
	width: 342px;
	margin: 0 20px 0 0;
}

#contact .address {
	overflow: hidden;
	text-align: right;
}

#contact #name {
	width: 100%;
	margin: 0 0 12px;
	padding: 0 0 8px;
	border-bottom: thin groove; 
	font: 2em Helvetica, Arial, sans-serif;
	color: #333;
	text-transform: uppercase;
	text-align: right;
}
/*
#contact #name {
	width: 300px;
	height: 200px;
	padding: 100px 0 0 0;
	text-align: center;
	color: #333;
	font: 20px/30px Helvetica, Arial, sans-serif;
	background-image: url('images/300px-hellomynameis.jpg');
	background-repeat: no-repeat;
	
	-webkit-transform: rotate(-30deg);
	-moz-transform: rotate(-30deg);
	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}
*/

#summary {
	overflow: hidden;
	float: none;
	margin: 0 0 0 0;
}

#summary p {
	font-size: 1em;
	line-height: 2em;
	margin: 0 0 5px 20px;
}

#contentWrapper {
	overflow: hidden;
	position: relative;
	width: 960px;
	margin: -5px auto 0;
	display: block;
}

#content {
	position: relative;
	float: right;
	width: 940px;
	margin: 0 0 20px;
	top: 0;
}

#content ul, #content ol {
	margin: 0 0 16px;
	padding: 0 0 0 24px;
}

#content p {
	margin: 0 0 16px;
	padding: 0 0 0 24px;
}

#content ul.gallery {
	clear: both;
	overflow: hidden;
	margin: 0 0 5px 24px;
	padding: 0;
}

#content ul.gallery li a {
	float: left;
	display: block;
	width: 4.5em;
	height: 85px;
	margin: 0 10px 0 0;
	text-align: center;
}

#content ul.gallery li a img {
	height: 60px;
	width: 60px;

	filter: alpha(opacity=75);
	-moz-opacity: 0.75;
	opacity: 0.75;
	
	-webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;	
}

.skill-table {
	margin: 0 0 16px 0px;
	padding: 0 0 0 0px;
}

.skill-table table {
	vertical-align: middle;
	border: 1px solid #CCC;
	border-collapse: collapse;
	width: 100%;
}

.skill-table table td {
	border: 1px solid #CCC;
	border-collapse: collapse;
}

.skill-table table tr td:nth-child(1) {
	font-weight: bold;
	padding: 7px 7px 7px 2px;
	width: 8em;
}

.skill-table table tr td:nth-child(2) {
	font-style: italic;
	padding: 7px 2px 7px 7px;
}

#other .other-block {
	float: left;
	width: 455px;
	margin: 0 15px 0 0;
	height: 9em;
}

#other .other-block h3 {
	width: 445px;
	margin: 0 0 10px 0;
	padding: 0 0 0 10px;
	width: 100%;
}

#other .other-block p {
	padding: 0 0 0 10px;
}

